--- a/experiment1/exp1.html
+++ b/experiment1/exp1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Website(PDEU)</title>
-    <link rel="stylesheet" href="css1.css">
+    <link rel="stylesheet" href="exp1.css">
 </head>
 <body>
 
