--- a/experiment2/exp2.html
+++ b/experiment2/exp2.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subject-wise Colored Timetable</title>
+    <title>H4-ICT Timetable</title>
     <link rel="stylesheet" href="exp2.css">
 </head>
 <body>
     <header>
-        <h1 class="title">Weekly Timetable</h1>
+        <h1 class="title">Pandit Deendayal Energy University </h1>
+        <h2 class="title">ICT-H4 </h2>
+        <h3 class="title">Weekly Timetable </h3>
     </header>
 
     <main>
